# task-manager

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-14645bd869b4bcf3b835cfaa8bc9bbd219c47bc16c30c487a719d0945e157acc.json  query-1cf69e3d26c7fe69fe7310d61c9b38e0c3af88b4cb4208d8dd8a59326c0da1d2.json  query-1e339e959f8d2cdac13b3e2b452d2f718c0fd6cf6202d5c9139fb1afda123d29.json  query-5013c214fcd1e725b4acd96483843b4f62714bd97a704901d02da2e1b33a1e28.json  query-5de3afcf0eec78f274a574ec7c6ff619d1452fe208b8f10c1e0e5ab5ca23ff7f.json  query-b9c5cfbd78197555aa64a4693b3438755daf7fffb58353bdab5750501bbc4312.json  query-c31bb9f0bfdd02b5df2288943997163e1c8338c4a1922a49147d26ae2a8840fe.json  query-ca158aa2ea2827fe8722a35d783f56c00c41a7416658510fedb08c4226e82f58.json  query-e0363202c85f9b0094582f81291bf997897d607978a9c4fdd19db3bb2c1dee50.json  query-f745a0eef39889e3d2fbf0e94c6d0f23b9e9c848d99daae883ed7c9fb5766218.json
migrations/: 20250921211618_create_tasks_table.sql  20250922150339_add_status_to_tasks.sql  20250922193517_create_users_table.sql
src/: main.rs
src/app/: routes.rs  state.rs
src/domain/: task.rs  user.rs
src/handlers/: mod.rs  task_handler.rs  user_handler.rs
src/handlers/auth/: middleware.rs
src/infrastructure/repositories/: mod.rs  sqlx_repository.rs
src/services/: auth_service.rs
src/views/: mod.rs  tasks.rs  templates.rs
templates/: base.html  index.html  login.html  svg_icons.html  tasks.html
