[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task-manager"
path = "src/main.rs"

[dependencies]
askama = "0.14.0"
async-trait = "0.1.89"
axum = "0.8.4"
bcrypt = "0.17.1"
chrono = "0.4.42"
cookie = "0.18.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
